# dataclasses

./: Cargo.toml  README.md
dataclasses_derive/: Cargo.toml
dataclasses_derive/src/: lib.rs
dataclasses_lib/: Cargo.toml
dataclasses_lib/src/: def.rs  example.rs  gen.rs  lib.rs
example/: simple.json
src/: lib.rs
tests/: basic.rs
