[package]
name = "dataclasses"
version = "0.1.0"
edition = "2024"
description = "A small, pragmatic procedural macro providing a Dataclass-like derive for Rust"
readme = "README.md"
repository = "https://github.com/lizelive/dataclasses"
homepage = "https://github.com/lizelive/dataclasses"
keywords = ["dataclass", "derive", "proc-macro", "macro", "python"]
license = "MIT OR Apache-2.0"
categories = [
	"development-tools",
	"development-tools::procedural-macro-helpers",
	"rust-patterns",
]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
